changing pojo to records, updating to restclient, updating tests